# SVN_QPDianDianShiGuang

./: CMakeLists.txt  buildcmake.sh  makeall.sh
.svn/: wc.db
CSLogicServer/: AI.cpp  ActiveManager.h  CSLogicServer.vcxproj.filters  Card.h  Config.cpp  Desk.h  InsideNet.h  JingMenHandler.cpp  Makefile.define  Makefile.files  Robot.h  RobotManager.cpp  User.cpp  User.h  UserManager.h  Work.cpp  logic_config.ini
CenterServer/: Config.h  DbServer.h  FinancialService.h  InsideNet.h  Makefile.define  UserManager.cpp  UserManager.h  main.cpp
DZLogicServer/: ActiveManager.cpp  DDZHandler_2Player.h  DDZHandler_ArenaPVE.cpp  DDZHandler_SanLai.cpp  DDZHandler_ShanxiWakeng.cpp  DDZHandler_SiChuan.cpp  DDZHandler_SiChuan3_PiZi.cpp  DDZHandler_SiChuanPiZi.cpp  DDZHandler_SiChuanPiZi.h  GameHandler.h  Makefile  Makefile.files  RobotManager.cpp  RoomVip.cpp  RoomVip.h  User.cpp  User.h  Work.cpp  gr_card_manager_ArenaPVE.cpp  gr_card_manager_sanlai.cpp  gr_card_manager_sanlai.h  gr_card_manager_shanxi_wakeng.h  gr_card_manager_sichuan3_pizi.cpp  gr_card_manager_sichuanpizi.h  main.cpp
GDLogicServer/: ActiveManager.h  Card.cpp  Config.cpp  Config.h  Desk.cpp  GameHandler.cpp  GameHandler.h  GuangDongOneHundredHandler.h  GuangDongTuiDaoHuHandler.cpp  GuangDongTuiDaoHuHandler.h  GuangdongJihuHandler.cpp  GuangdongJihuHandler.h  Makefile  Makefile.define  NewHandCards.h  Robot.cpp  RobotManager.h  User.cpp  UserManager.cpp  UserManager.h  Work.cpp
GateServer/: Config.cpp  main.cpp
LBase/: BaseCommonFunc.cpp  BaseCommonFunc.h  BlockingQueue.h  CircularArrayQueue.h  DBSession.cpp  Func.cpp  Func.h  LBase.h  LBase.vcxproj  LIni.cpp  LLog.cpp  LMsg.cpp  LMsg.h  LMsgCT.h  LNet.cpp  LSingleton.h  LSocket.cpp  LSocket.h  LTabFile.cpp  LTabFile.h  LTime.cpp  LTool.cpp  LUser.cpp  LUser.h  LVideo.cpp  LVideo.h  LVipLog.cpp  MiniDump.h  RLogHttp.cpp  TCPClient.cpp  TCPClient.h
LogicDB/: Config.h  LogicDB.vcxproj  Makefile  Work.h  main.cpp
LogicManager/: AI.h  ActiveManager.cpp  ActiveManager_SignCollect.cpp  Arena.h  ArenaUser.cpp  Config.cpp  DeskManager.cpp  DeskManager.h  LogicManager.vcxproj  Makefile  User.cpp  User.h  UserManager.cpp  Work.h  main.cpp
LogicManager/PlayerTask/: GenericRewardStrategyFactory.cpp  IRewardStrategy.h  IRewardStrategyFactory.h  PlayerTaskBase.h  PlayerTaskManager.h  PlayingGameTask.h
LoginGate/: Config.cpp  Config.h  InsideNet.cpp  InsideNet.h  LoginGate.vcxproj  Makefile  Work.cpp  main.cpp
TeamServer/: Config.cpp  Config.h  DbServer.cpp  DeskManager.cpp  GateUserManager.h  HanderHttp.cpp  HanderHttp.h  HttpRequest.cpp  HttpRequest.h  Makefile  OutsideNet.h  TeamChargeLog.h  TeamErrorCode.h  TeamInfo.h  TeamManager.cpp  TeamManager.h  TeamServer.vcxproj.filters  Work.cpp  Work.h  main.cpp  make.sh
share/dbsql/: 20161013_doudizhu_logic.txt  20161103_doudizhu_Center.sql
